manifests/jenkins/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins
  labels:
    purpose: ci-orchestrator
